--- a/PackingUp/Base.lproj/Main.storyboard
+++ b/PackingUp/Base.lproj/Main.storyboard
@@ -505,8 +505,11 @@
                                 <rect key="frame" x="0.0" y="523" width="320" height="45"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ev2-2n-ifU">
-                                        <rect key="frame" x="17" y="12" width="85" height="22"/>
-                                        <state key="normal" title="&lt; Zurück"/>
+                                        <rect key="frame" x="21" y="11" width="81" height="26"/>
+                                        <color key="backgroundColor" red="0.2274509804" green="0.31372549020000001" blue="0.36862745099999999" alpha="1" colorSpace="calibratedRGB"/>
+                                        <state key="normal" title="&lt; Zurück">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
                                         <connections>
                                             <action selector="doZurück:" destination="eYm-5c-Tia" eventType="touchUpInside" id="Rqc-ML-Iov"/>
                                         </connections>
@@ -720,12 +723,28 @@
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                         </containerView>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="listCell" id="xXj-4w-GDG">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="listCell" textLabel="NuZ-kv-EFa" detailTextLabel="Ypo-VI-eYJ" style="IBUITableViewCellStyleValue1" id="xXj-4w-GDG">
                                 <rect key="frame" x="0.0" y="299" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="xXj-4w-GDG" id="ORV-OD-A6D">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="287" height="43"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="NuZ-kv-EFa">
+                                            <rect key="frame" x="15" y="12" width="32" height="20"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Detail" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Ypo-VI-eYJ">
+                                            <rect key="frame" x="243" y="12" width="42" height="20"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                            <color key="textColor" red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
                                 </tableViewCellContentView>
                             </tableViewCell>
                         </prototypes>
@@ -762,7 +781,7 @@
                                 <rect key="frame" x="0.0" y="28" width="320" height="190"/>
                             </imageView>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Ii2-9j-F0U">
-                                <rect key="frame" x="20" y="322" width="280" height="156"/>
+                                <rect key="frame" x="20" y="329" width="280" height="149"/>
                                 <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                 <color key="textColor" red="0.2274509804" green="0.31372549020000001" blue="0.36862745099999999" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -774,6 +793,9 @@
                                 <state key="normal" title="Details">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="doDetail:" destination="7DM-fY-rzz" eventType="touchUpInside" id="M31-nU-fk7"/>
+                                </connections>
                             </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="starFilled" translatesAutoresizingMaskIntoConstraints="NO" id="1JQ-hd-Ta3">
                                 <rect key="frame" x="28" y="249" width="48" height="48"/>
@@ -808,10 +830,19 @@
                                 <state key="normal" title="Download">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="doDowload:" destination="7DM-fY-rzz" eventType="touchUpInside" id="dn5-gZ-eul"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
+                    <connections>
+                        <outlet property="downloadButton" destination="WwO-4x-MjK" id="sDP-Js-LlC"/>
+                        <outlet property="mImageView" destination="1li-m4-DvY" id="0En-Jp-ceB"/>
+                        <outlet property="star4" destination="aDw-3K-2ah" id="jKI-al-mGl"/>
+                        <outlet property="star5" destination="oEs-YO-7DY" id="v7x-XL-UmE"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zTz-Wt-lfm" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -893,6 +924,10 @@
         <scene sceneID="pjv-J1-eel">
             <objects>
                 <viewController id="HoS-7Q-iAX" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="iOo-xZ-PEX"/>
+                        <viewControllerLayoutGuide type="bottom" id="ZZA-xh-Mfd"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="cN2-eO-vYT">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
